# playground

./: .gitignore  README.md  package-lock.json  package.json
src/: style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/pages/: index.jsx
